fix layout bugs

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -165,27 +165,26 @@ header {
     margin-bottom: 50px;
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
-    justify-content: space-between;
+    gap: 8px;
 }
 
 .card-place {
     
     flex: 1 1 100%;
 }
-@media (min-width: 640px) {
+@media (min-width: 900px) {
     .card-place {
-        flex-basis: calc((100% / 2) - 1rem); // 2 across at tabletish
+        max-width: calc((100% - 8px) / 2); // 2 across at tabletish
     }
 }
-@media (min-width: 1124px) {
+@media (min-width: 1180px) {
     .card-place {
-        flex-basis: calc((100% / 3) - 2rem); // 3 across at desktop
+        max-width: calc((100% - 16px) / 3); // 3 across at desktop
     }
 }
 @media (min-width: 1300px) {
     .card-place {
-        flex-basis: calc((100% / 4) - 3rem); // 4 across at desktop
+        max-width: calc((100% - 24px) / 4); // 4 across at desktop
     }
 }
 
@@ -260,18 +259,22 @@ header {
 .channels-container {
     padding: 20px;
     margin-bottom: 50px;
+}
+
+.row {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 8px;
     justify-content: space-between;
 }
 
 .channel-card {
+    overflow: hidden;
     height: 100%;
-    width: 100%;
+    width: calc(100% - 20px);
     display: flex;
     flex-direction: column;
-    padding: 7px 10px;
+    padding: 10px;
     height: max-content;
 
     .prev {
